refactor: added/updated custom content

--- a/content/index/hero/hero.mdx
+++ b/content/index/hero/hero.mdx
@@ -1,9 +1,9 @@
 ---
 greetings: "Hello"
 icon: "waving-hand.png"
-title: "I'm a Gatsby Starter"
-subtitlePrefix: "I create awesome "
-subtitle: "one-page portfolios"
+title: "I'm Vinay Rawat"
+subtitlePrefix: ""
+subtitle: "Engineering Tomorrow's Solutions Today"
 ---
 
-A modern portfolio with a minimalistic design.
+Welcome to my portfolio! I'm a software developer passionate about crafting efficient solutions. Explore my projects and discover the power of code in action.
