Added convogen in project section

--- a/content/index/projects/easy-setup/index.mdx
+++ b/content/index/projects/easy-setup/index.mdx
@@ -1,15 +1,15 @@
 ---
-title: "Add content and deploy!"
-category: "Easy and Quick Setup"
+title: "Convogen"
+category: "Cross Platform App"
 emoji: "🕹️"
-screenshot: "./clement-h-95YRwf6CNw8-unsplash.jpg"
-github: "https://github.com/konstantinmuenster/gatsby-starter-portfolio-minimal"
-external: "https://unsplash.com/@clemhlrdt?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
+screenshot: "./convogen.png"
+github: "https://github.com/vineyrawat/convogen"
+external: "https://convogen.vinaybyte.in/"
 tags:
-  - Content Integration
-  - Ready-2-Deploy
+  - Flutter
+  - AI Chat App
 visible: true
 position: 1
 ---
 
-Get up and running within minutes. Just install the starter, add your content, deploy it, and there you go! This starter works seamlessly with hosts like Netlify. Photo by <a href="https://unsplash.com/@clemhlrdt?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="_blank" rel="nofollow noopener noreferrer" aria-label="External Link">Clément H</a> on Unsplash.
+Convogen is a Flutter Chat application that utilizes the Google Gemini API.
